Задание 5 готово. Применил округление в шаблоне до сотых, хотя в задание об этом не сказано.

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -29,6 +29,14 @@ td, th
             &__amount
                 text-align: right
 
+        tfoot
+            td
+                background: rgba(0, 0, 0, 0.8)
+                color: #fff
+                border: solid 1px #eee
+                padding: 10px
+
+
     &__user_details
         max-height: 0
         overflow-y: hidden;
