--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -12,6 +12,17 @@ td, th
     border: solid 1px #D5DDDF
     text-align: left
 
+table
+    width: 100%
+
+input[type='text']
+    font: inherit
+    color: inherit
+    font-weight: normal
+    padding: 5px 10px
+    width: 50%
+    box-sizing: border-box
+
 .page_orders
     &__table
         border-spacing: 0
@@ -24,6 +35,8 @@ td, th
                     display: inline-block
                     vertical-align: middle
 
+        &__head
+            &__search
         &__body
 
             &__amount
